[project]
name = "leetcode-daily-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx[brotli,http2,zstd]>=0.28.1",
    "tenacity>=9.1.2",
    "brotli>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
